kubernetes/k3s-prod-a/workloads/romm/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: romm
  namespace: romm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      containers:
        - name: romm
          image: docker.io/rommapp/romm:3.7.3@sha256:61bc20fca829c71946639323204dc6059fbf570db3cd6e17afb5b11631dc33a6
          startupProbe:
            httpGet:
              path: /api/heartbeat
              port: 8080
            failureThreshold: 5
            periodSeconds: 20
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: romm-data
              mountPath: /romm/assets
              subPath: assets/
            - name: romm-data
              mountPath: /romm/config
              subPath: config/
            - name: romm-data
              mountPath: /romm/resources
              subPath: resources/
            - name: romm-roms
              mountPath: /romm/library/roms
      volumes:
        - name: romm-data
          persistentVolumeClaim:
            claimName: romm-data
        - name: romm-roms
          persistentVolumeClaim:
            claimName: romm-roms
